--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,11 @@
 	<dependencies>
 	
 		<dependency>
+			<groupId>org.projectlombok</groupId>
+			<artifactId>lombok</artifactId>
+		</dependency>
+		
+		<dependency>
 			<groupId>org.postgresql</groupId>
 			<artifactId>postgresql</artifactId>
 		</dependency>
