teste de integracao

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,4 +2,4 @@
 spring.datasource.url=jdbc:postgresql://localhost:5432/react
 spring.datasource.username=postgres
 spring.datasource.password=14945042780
-spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+spring.datasource.driver-class-name=org.postgresql.Driver
